--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.big-box{
+  background-color: darkgrey;
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset;
+}
+
+.box{
+  background-color: aqua;
+}
+
+.big-box-img{
+  border-radius: 50%;
+}
+
+.intro{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
